[package]
name = "pow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
digest = "0.10.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.30"
async-std = { version = "1.2", features = ["attributes"] }
num-bigint = "0.4"
